đưa vào file js vào forder js

--- a/cart.html
+++ b/cart.html
@@ -836,6 +836,6 @@
         </footer>
         <!-- modal -->
         <div class="modal"></div>
-        <script type="module" src="./cart.js"></script>
+        <script type="module" src="./assets/js/cart.js"></script>
     </body>
 </html>
