--- a/detail.html
+++ b/detail.html
@@ -948,6 +948,6 @@
         <div class="modal"></div>
         <!-- toast -->
         <div id="toast"></div>
-        <script src="./detail.js"></script>
+        <script src="./assets/js/detail.js"></script>
     </body>
 </html>
