--- a/index.html
+++ b/index.html
@@ -1780,6 +1780,6 @@
         <div class="seacrh__product">
             <div class="search__product--content"></div>
         </div>
-        <script type="module" src="./main.js"></script>
+        <script type="module" src="./assets/js/main.js"></script>
     </body>
 </html>
