--- a/signin.html
+++ b/signin.html
@@ -121,6 +121,6 @@
                 </p>
             </div>
         </div>
-        <script type="module" src="./signin.js"></script>
+        <script type="module" src="./assets/js/signin.js"></script>
     </body>
 </html>
