--- a/signup.html
+++ b/signup.html
@@ -161,6 +161,6 @@
             </div>
         </div>
         <div id="toast"></div>
-        <script src="./sigup.js"></script>
+        <script src="./assets/js/sigup.js"></script>
     </body>
 </html>
