--- a/succes.html
+++ b/succes.html
@@ -55,6 +55,6 @@
                 </div>
             </div>
         </div>
-        <script src="./succes.js"></script>
+        <script src="./assets/js/succes.js"></script>
     </body>
 </html>
